Refactored Recipe attributes into qualified classes. Added RecipeCollection domain entity